--- a/back/package.json
+++ b/back/package.json
@@ -2,9 +2,10 @@
   "name": "vertical-slice-auth-backend",
   "version": "1.0.0",
   "description": "Node.js & TypeScript Vertical Slice Architecture for Auth Module (Feature-First)",
-  "main": "src/presentation/index.ts",
+  "main": "src/index.ts",
+  "type": "commonjs",
   "scripts": {
-    "dev": "nodemon --watch src --exec ts-node src/presentation/index.ts",
+    "dev": "nodemon --watch src --exec ts-node src/index.ts",
     "start": "node dist/presentation/index.js",
     "build": "tsc"
   },
@@ -24,10 +25,10 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.25",
-    "@types/node": "^20.19.29",
-    "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.3.3",
+    "nodemon": "^3.1.0",
+    "@types/node": "^20.11.30",
+    "@types/express": "^4.17.21"
   }
 }
