--- a/back/package.json
+++ b/back/package.json
@@ -21,14 +21,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "nodemon": "^3.1.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
-    "@types/express": "^4.17.21"
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
