--- a/back/.gitignore
+++ b/back/.gitignore
@@ -1,25 +1,21 @@
-# Node modules
+# Node dependencies
 node_modules/
-
 # Build output
 dist/
-
-# Local environment variables
+# Coverage
+coverage/
+# Environment secrets
 .env
-
+.env.*
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# OS/IDE files
-.DS_Store
-Thumbs.db
+# IDE files
 .vscode/
 .idea/
-
-# Coverage
-coverage/
-
-# Others
+# System files
+.DS_Store
+Thumbs.db
+# Misc
 *.log
