--- a/back/package.json
+++ b/back/package.json
@@ -1,35 +1,41 @@
 {
-  "name": "vertical-slice-auth-backend",
+  "name": "vertical-slice-auth",
   "version": "1.0.0",
-  "description": "Node.js & TypeScript Vertical Slice Architecture for Auth Module (Feature-First)",
-  "main": "src/index.ts",
-  "type": "commonjs",
+  "description": "Vertical Slice, Clean Architecture Auth module in Node.js & TypeScript",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon --watch src --exec ts-node src/index.ts",
-    "start": "ts-node src/index.ts",
-    "build": "tsc"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "lint": "eslint src --ext .ts"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": [
     "vertical-slice",
-    "feature-first",
+    "clean-architecture",
     "typescript",
-    "node",
     "express",
-    "zod",
     "auth"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "argon2": "^0.44.0",
     "dotenv": "^17.2.3",
-    "express": "^4.18.2",
-    "zod": "^3.22.4"
+    "express": "^4.22.1",
+    "jsonwebtoken": "^9.0.3",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@types/express": "^4.17.25",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.29",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.2",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
