--- a/back/.gitignore
+++ b/back/.gitignore
@@ -1,21 +1,19 @@
-# Node dependencies
+# Node
 node_modules/
-# Build output
 dist/
-# Coverage
-coverage/
-# Environment secrets
 .env
 .env.*
-# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-# IDE files
-.vscode/
-.idea/
-# System files
+*.log
+
+# OS
 .DS_Store
 Thumbs.db
-# Misc
-*.log
+
+# Editors
+.vscode/
+.idea/
+*.swp
+*~
