--- a/back/package.json
+++ b/back/package.json
@@ -1,41 +1,32 @@
 {
-  "name": "vertical-slice-auth",
+  "name": "vertical-slice-auth-backend",
   "version": "1.0.0",
-  "description": "Vertical Slice, Clean Architecture Auth module in Node.js & TypeScript",
-  "main": "dist/index.js",
-  "type": "module",
+  "description": "Production-ready Node.js (TypeScript, Express, Auth) with Vertical Slice Architecture.",
+  "main": "dist/presentation/server.js",
+  "type": "commonjs",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/presentation/server.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "lint": "eslint src --ext .ts"
+    "start": "node dist/presentation/server.js",
+    "lint": "eslint . --ext .ts",
+    "prestart": "npm run build"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": [
-    "vertical-slice",
-    "clean-architecture",
-    "typescript",
-    "express",
-    "auth"
-  ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "argon2": "^0.44.0",
-    "dotenv": "^17.2.3",
-    "express": "^4.22.1",
-    "jsonwebtoken": "^9.0.3",
-    "zod": "^3.25.76"
+    "express": "^4.19.2",
+    "zod": "^3.22.4",
+    "argon2": "^0.31.2",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.1",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.25",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.19.29",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.2",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.7",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/uuid": "^9.0.7",
+    "tsx": "^4.7.0",
+    "typescript": "^5.4.5",
+    "eslint": "^8.56.0",
+    "ts-node": "^10.9.2"
   }
 }
