--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,18 @@ services:
     volumes:
       - ./back:/app
       - /app/node_modules
+
+  redis:
+    image: "redis:7-alpine"
+    container_name: redis
+    restart: unless-stopped
+    command: ["redis-server", "--appendonly", "yes"]
+    volumes:
+      - redis-data:/data
+    # ports:
+    #   - "6379:6379"  # Uncomment if you need host access
+    labels:
+      - "service=redis"
+
+volumes:
+  redis-data:
