--- a/back/package.json
+++ b/back/package.json
@@ -12,21 +12,22 @@
     "prestart": "npm run build"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "zod": "^3.22.4",
     "argon2": "^0.31.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "redis": "^5.10.0",
     "uuid": "^9.0.1",
-    "dotenv": "^16.4.5"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.7",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.12.7",
     "@types/uuid": "^9.0.7",
-    "tsx": "^4.7.0",
-    "typescript": "^5.4.5",
     "eslint": "^8.56.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.0",
+    "typescript": "^5.4.5"
   }
 }
