implement the rate limiter

--- a/back/.env.example
+++ b/back/.env.example
@@ -9,4 +9,7 @@ REDIS_URL=redis://redis:6379
 
 # Rate Limiter (defaults can be overridden at runtime)
 LOGIN_RATE_LIMIT_WINDOW_SECONDS=10     # Time window in seconds
-LOGIN_RATE_LIMIT_MAX_REQUESTS=10       # Max requests allowed per window
+LOGIN_RATE_LIMIT_MAX_REQUESTS=3       # Max requests allowed per window
+
+BUY_TICKER_RATE_LIMIT_WINDOW_SECONDS=20     # Time window in seconds
+BUY_TICKER_RATE_LIMIT_MAX_REQUESTS=3       # Max requests allowed per window
