--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,40 @@
 services:
-  backend:
+  backend-01:
     build:
       context: ./back
       dockerfile: Dockerfile
     ports:
-      - "4000:4000"
+      - "4001:4000"
+      - "9229:9229"
+    env_file:
+      - ./back/.env.example
+    volumes:
+      - ./back:/app # Mounts the local ./back directory to /app in the container for live code updates
+      # - /app/node_modules     # Ensures node_modules inside the container are not overwritten by the host
+    depends_on:
+      - redis
+
+  backend-02:
+    build:
+      context: ./back
+      dockerfile: Dockerfile
+    ports:
+      - "4002:4000"
+      - "9229:9229"
+    env_file:
+      - ./back/.env.example
+    volumes:
+      - ./back:/app # Mounts the local ./back directory to /app in the container for live code updates
+      # - /app/node_modules     # Ensures node_modules inside the container are not overwritten by the host
+    depends_on:
+      - redis
+
+  backend-03:
+    build:
+      context: ./back
+      dockerfile: Dockerfile
+    ports:
+      - "4003:4000"
       - "9229:9229"
     env_file:
       - ./back/.env.example
